--- a/src/app/movie-editor/movie-editor.component.html
+++ b/src/app/movie-editor/movie-editor.component.html
@@ -2,17 +2,13 @@
   <form [formGroup]="movieForm">
     <div class="form-group">
       <label>Movie Name</label>
-      <input
-        formControlName= "name"
-        class="form-control" type="text" />
-      <span class=help>Name is required</span>
+      <input formControlName="name" class="form-control" type="text" />
+      <span *ngIf="(!movieForm.get('name').valid) && (movieForm.get('name').touched)" class=help>Name is required</span>
     </div>
     <div class="form-group">
       <label>Image URL</label>
-      <input
-        [formControlName]= "'imageUrl'"
-        class="form-control" type="text" />
-      <span class=help>image is required</span>
+      <input [formControlName]="'imageUrl'" class="form-control" type="text" />
+      <span *ngIf="(!movieForm.get('imageUrl').valid) && (movieForm.get('imageUrl').touched)" class=help>Url image is required</span>
     </div>
     <div class="form-group">
       <button class="btn-success" (click)="onSubmit()">OK</button>
