--- a/src/app/movie-details/movie-details.component.html
+++ b/src/app/movie-details/movie-details.component.html
@@ -1,15 +1,21 @@
-<div
-  *ngIf="selectedMovie != null"
-  class="panel panel-primary main"
-  >
+<div *ngIf="selectedMovie != null" class="panel panel-primary main">
   <div class="panel-heading">
-    {{selectedMovie.name}}
+
+
+    <h1>name: {{selectedMovie.name}}</h1>
   </div>
-  <div>
-    <img [src]="selectedMovie.imageUrl"
-      />
-  </div>
+  <div><img [src]="selectedMovie.imageUrl" /></div>
   <div class="panel-footer">
-    Rating: {{selectedMovie.rating}}
+    <div class="row equal">
+      <div class="col-xs-2">
+          <button class="btn btn-default" *ngIf="canPrev" (click)="prev()">Prev</button>
+      </div>
+      <div class="col-xs-8">
+          <div><h4>Rating: {{selectedMovie.rating}}</h4></div>
+      </div>
+      <div class="col-xs-2">
+          <div><button class="btn btn-default" *ngIf="canNext" (click)="next()">Next</button>
+      </div>
+    </div>
   </div>
 </div>
