--- a/src/app/movie-editor/movie-editor.component.html
+++ b/src/app/movie-editor/movie-editor.component.html
@@ -1,17 +1,19 @@
-<div>
+<div class="col-xs-6 form-root">
   <form [formGroup]="movieForm">
-    <div class="form-group">
+    <div class="form-group ">
       <label>Movie Name</label>
-      <input formControlName="name" class="form-control" type="text" />
-      <span *ngIf="(!movieForm.get('name').valid) && (movieForm.get('name').touched)" class=help>Name is required</span>
+      <input [formControlName]="'name'"
+      class="form-control" type="text" />
+      <span class="help">Name is required</span>
     </div>
     <div class="form-group">
-      <label>Image URL</label>
-      <input [formControlName]="'imageUrl'" class="form-control" type="text" />
-      <span *ngIf="(!movieForm.get('imageUrl').valid) && (movieForm.get('imageUrl').touched)" class=help>Url image is required</span>
+      <label>image URL</label>
+      <input [formControlName]="'imageUrl'"
+       class="form-control" type="text" />
+      <span class="help">URL is required</span>
     </div>
     <div class="form-group">
-      <button class="btn-success" (click)="onSubmit()">OK</button>
+      <button class="btn btn-success" (click)="onSubmit()">OK</button>
     </div>
   </form>
 </div>
