--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-body {
-  background-color: lightgray;
-}
+/* img {
+  box-shadow: 8px 8px 10px #aaa;
+  border: 15px solid #3e2b14;
+  padding: 10px;
+  border-radius: 30px;
+  opacity: 0.5;
+  width: 200px;
+} */
