--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,19 @@
-<h1>My amazing movies app</h1>
-
-<button
-class="btn btn-primary"
-[ngStyle]="{margin:'20px'}"
- (click)="loadMovies()">Load Movies</button>
-
-<img *ngIf="isBusy" src="https://i.stack.imgur.com/8puiO.gif" height=100px/>
-
-<app-movie-editor></app-movie-editor>
-
-<app-movies-list
-  [movies]="movies"
-  (selectedMovieChanged)="selectMovie($event)"
-  >
-</app-movies-list>
-
-<app-movie-details
-  [selectedMovie]="selectedMovie"
-  >
-</app-movie-details>
+<div class="container">
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" [routerLink]="'/'"> My Amazing Movies App</a>
+          </div>
+          <ul class="nav navbar-nav">
+              <li><a [routerLink]="'/movies'">Movies</a></li>
+              <li><a [routerLink]="'/categories'">Categories</a></li>
+              <li><a >Add Movie</a></li>
+            </ul>
+        </div>
+    </nav>
+    <marquee>this page reloded </marquee>
+    <div>
+      <!-- <app-home-page></app-home-page> -->
+      <router-outlet></router-outlet>
+     </div>
+</div>
