--- a/src/app/movie-editor/movie-editor.component.css
+++ b/src/app/movie-editor/movie-editor.component.css
@@ -1,15 +1,10 @@
-.form-root {
+.form-root{
   margin: 20px;
-  border:1pxsolid darkblue;
+  border: 1px solid darkblue;
   border-radius: 10px;
-  padding: 20x;
+  padding: 20px;
 }
 
-.help {
-  color:red;
-}
-
-input.ng-invalid.ng-touched {
-  border: 1px solid red;
-  background-color: pink;
+.help{
+  color: red;
 }
